# ThorsSerializer

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  CreateHeaderOnly  LICENSE  Makefile  Makefile.config  Makefile.config.in  Makefile.extra.in  Notes  README.md  Serialize.cpp  codecov.yml  conanfile.py  config.h.in  configure  configure.ac  uploadcodecovrage
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml
GitUtility/: GitUtilityConfig.h
ThorSerialize/: BsonParser.h  BsonParser.source  BsonPrinter.source  BsonThor.h  BsonUtil.h  CustomSerialization.h  CustomSerialization.tpp  Exporter.h  JsonLexemes.h  JsonManualLexer.h  JsonManualLexer.source  JsonParser.source  JsonPrinter.source  MongoUtility.h  MongoUtility.source  SerUtil.h  Serialize.h  Serialize.tpp  SerializeConfig.h  ThorsSerializerUtil.h  ThorsSerializerUtil.source  Traits.h  UnicodeIterator.h  YamlParser.h  YamlParser.source  YamlPrinter.h  YamlPrinter.source
ThorsCrypto/: ThorsCryptoConfig.h  base64.h  crc.h  hash.h  hmac.h  md5.h  pbkdf2.h  scram.h
ThorsIOUtil/: ThorsIOUtilConfig.h  Utility.h
ThorsLogging/: ThorsLogging.h  ThorsLoggingConfig.h  loguru.source
ThorsMongo/: AuthClient.source  Authenticate.source  AuthenticateScramSha.source  ConnectionBufferMongo.source  ConnectionMongo.source  Makefile  MessageHandler.source  ThorsMongo.source  ThorsMongoCommon.source  ThorsMongoConfig.h  ThorsMongoListCollection.tpp
ThorsSocket/: Connection.h  ConnectionFile.h  ConnectionFile.source  ConnectionFileDescriptor.h  ConnectionFileDescriptor.source  ConnectionNormal.h  ConnectionNormal.source  ConnectionPipe.h  ConnectionPipe.source  ConnectionSSL.h  ConnectionSSL.source  ConnectionSSocket.h  ConnectionSSocket.source  ConnectionSSocketUtil.h  ConnectionSSocketUtil.source  ConnectionSimpleFile.h  ConnectionSimpleFile.source  ConnectionSocket.h  ConnectionSocket.source  ConnectionUtil.h  ConnectionUtil.source  OpenSSLMacroWrappers.h  SecureSocketUtil.h  SecureSocketUtil.source  Socket.h  Socket.source  SocketStream.h  SocketStream.source  SocketStream.tpp  SocketStreamBuffer.h  SocketStreamBuffer.source  SocketUtil.h  SocketWrapper.h  ThorsSocketConfig.h
ThorsStorage/: ThorsStorageConfig.h  filesystem.h  filesystem.source
brew/: init
doc/: api.md  building.md  example0.cpp  example0.md  example1.cpp  example1.md  example2.cpp  example2.md  example3.cpp  example3.md  example4.cpp  example6.cpp  example6.md  example7.cpp  example7.json  example7.md  example8.cpp  example8.md  exampleE.cpp  exampleE.md  full.md  internal.md  objective.md  usage.md
docSource/: config.json
docSource/source/function/: ThorSerialize.BinaryThor.binExport.md  ThorSerialize.BinaryThor.binImport.md  ThorSerialize.JsonThor.jsonExport.md  ThorSerialize.JsonThor.jsonImport.md  ThorSerialize.YamlThor.yamlExport.md  ThorSerialize.YamlThor.yamlImport.md
docSource/source/group/: api.md  apiBinary.md  apiExporter.md  apiImporter.md  apiJSON.md  apiMacros.md  apiYAML.md  impl.md  implTraits.md  implTraitsArray.md  implTraitsEnum.md  implTraitsMap.md  implTraitsPointer.md  implTraitsSerialize.md  implTraitsValue.md  internal.md  intro.md  usage.md  (+11 more)
docs/: index.html
docs/group/: 1
docs/javascripts/: prism.js
docs/stylesheet/: prism.css
src/: Makefile  ThorsCrypto  ThorsIOUtil  ThorsLogging  ThorsMongo  ThorsSocket  ThorsStorage  fast_float
src/BinaryRep/: .gitignore  BinaryFormat.h  BinaryRep.h  FltBinRep.h  IntBinRep.h  Makefile  README.md  test.cpp
src/GitUtility/: .gitignore  GitUtilityConfig.h.in  Makefile  ieee754_types.h
src/Logging/: Makefile  loguru.cpp  loguru.hpp
src/Parser/: JsonLexer.l  JsonParser.cpp  JsonParser.h  JsonPrinter.cpp  JsonPrinter.h  Makefile  Serialize.h  UnicodeIterator.h  YamlPrinter.cpp  YamlPrinter.h  test.cpp
src/Serialize/: Binary.h  BinaryDecial.cpp  BinaryDecial.h  BinaryParser.cpp  BinaryParser.h  BinaryParser.tpp  BinaryPrinter.h  BinaryTHash.cpp  BinaryTHash.h  BinaryTHash.tpp  BinaryThor.h  BsonConfig.cpp  BsonConfig.h  BsonManualLexer.cpp  BsonManualLexer.h  BsonParser.cpp  BsonParser.h  BsonPrinter.cpp  BsonPrinter.h  BsonPrinterConfig.h  BsonThor.h  BsonUtil.h  CustomSerialization.cpp  CustomSerialization.h  CustomSerialization.tpp  Exporter.h  Format.h  Importer.h  Json.h  JsonLexemes.h  JsonLexer.h  JsonLexer.l  JsonManualLexer.cpp  JsonManualLexer.h  JsonParser.cpp  JsonParser.h  JsonPrinter.cpp  JsonPrinter.h  JsonThor.h  Logging.h  (+41 more)
test_package/: .gitignore  Makefile  ThorsSerializerTest.cpp  conanfile.py
third/: .gitignore  setup
(+172 files in other folders)
